# bazel-rust-build

./: .gitignore  README.md  WORKSPACE.bazel
web-api/: BUILD  Rocket.toml
web-api/cargo/: Cargo.toml
web-api/src/: main.rs
