[package]
name = "web_api"
version = "0.1.0"
authors = ["Nathaniel Ford <nathanielford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5", features = ["tls"] }

[lib]
path = "fake_lib.rs"  # Required for Cargo tooling for reasons??

#[patch]
#log = "0.4.8"

[raze]
genmode = "Remote"
workspace_path = "//web-api/cargo"
output_buildfile_suffix = "BUILD.bazel"